Added title to page-specific meta.

--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -1,10 +1,12 @@
 
 <% if @meta %>
-
+  <title><%= @meta[:title] %></title>
   <meta name="description" content="<%= @meta[:description] %>" />
   <meta name="keywords" content="<%= @meta[:keywords] %>" />
 
 <% else %>
+
+<title>YoMobi - Free Mobile Website Builder Platform</title>
 
 <meta name="description" content="YoMobi is a completely free and easy to use mobile website builder and creation platform. In minutes you can create an interactive, social media enabled mobile site to reach your customers, friends, and fans wherever they are." />
 
