--- a/app/views/layouts/account.slim
+++ b/app/views/layouts/account.slim
@@ -12,6 +12,9 @@
     li.option.payment_history
       div.icon
       a class=active('payment-history',@page) href=account_payments_path = t 'account_settings.payment_history'
+    li.option.merchant_account
+      div.icon
+      a class=active('merchant-account',@page) href=merchant_account_path = t 'account_settings.merchant_account'
     li.option.cancel_account
       div.icon
       a href="http://help.yomobi.com/Account/CancelAccount" target="ymhelp" = t 'account_settings.cancel_account'
