Updated title, description and keywords in home_controller.rb and _meta.html.erb

--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -6,10 +6,10 @@
 
 <% else %>
 
-<title>YoMobi - Free Mobile Website Builder Platform</title>
+<title>Mobile Website Builder | Mobile Website | YoMobi</title>
 
-<meta name="description" content="YoMobi is a completely free and easy to use mobile website builder and creation platform. In minutes you can create an interactive, social media enabled mobile site to reach your customers, friends, and fans wherever they are." />
+<meta name="description" content="YoMobi is a mobile website builder that helps you reach more customers with a free mobile website.  Create your mobile website in minutes and reach your fans wherever they are." />
 
-<meta name="keywords" content="mobile site builder, free mobile site builder, top mobile sites, mobi, mobile to web, mobile web design, mobile web browser, build mobile web site, mobile web development, free mobile website creator, mobile web page design, mobile web site design, mobi web design, mobi web designer, mobi web development, mobi Website Creator, mobi web page design, mobi web site design, mobi Site Builder, wap sites builder, wap page creator, creating a mobile website, how to build a mobile site, mobile web, mobi pcs, mobile, web, mobi" />
+<meta name="keywords" content="mobile website builder, mobile website, free mobile website, website creator free, mobile web sites, mobile site builder, free mobile site builder, top mobile sites, mobi, mobile to web, mobile web design, mobile web browser, build mobile web site, mobile web development, free mobile website creator, mobile web page design, mobile web site design, mobi web design, mobi web designer, mobi web development, mobi Website Creator, mobi web page design, mobi web site design, mobi Site Builder, wap sites builder, wap page creator, creating a mobile website, how to build a mobile site, mobile web, mobi pcs, mobile, web, mobi" />
 
 <% end %>
