Give mobile home page a hash tag. Closes #425
This is to prevent an empty hash, which forces the page to
scroll to top.

--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -5,7 +5,7 @@
     table
       tr
         td.go-home
-          a href="#" =t'mobile.tab_bar.home'
+          a href="#home" =t'mobile.tab_bar.home'
         td.wtab
         td.wtab
         td.wtab
