--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -42,7 +42,7 @@
     table
       tr
         td.go-home
-          a href="#" =t'mobile.tab_bar.home'
+          a href="#home" =t'mobile.tab_bar.home'
         td.wtab data-wid="{{ wids[0] }}"
           div {{ wnames[0] }}
         td.wtab data-wid="{{ wids[1] }}"
