--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -36,9 +36,8 @@ p {
   -webkit-margin-after: 0em;
 }
 
-.leaf-content {
-  h1, h2, h3 { margin: 0px; }
-  h1, h2, h3 { margin-bottom: 6px; }
+.leaf-content, .custom_page {
+  h1, h2, h3 { margin: 4px 0px 4px 0px; }
   ul, ol {
     margin-top: 8px;
     margin-bottom: 8px;
