--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -432,6 +432,16 @@ script.customize(type="text/template")
               .color-picker data-color="{{ icon_text_color }}" data-target="icon_text_color"
                 div style="background-color:{{ icon_text_color }}"
               input type="hidden" name="icon_text_color" value="{{ icon_text_color }}"
+              
+        table.body_bg.wphoto-wrap
+          tbody
+            tr
+              td
+                label = t 'builder.customize.icon_layout'
+                input type="radio" name="icon_layout" value="grid"
+                label = t 'builder.customize.icon_layout_grid'
+                input type="radio" name="icon_layout" value="line"
+                label = t 'builder.customize.icon_layout_line'
 
         table.body_bg.wphoto-wrap
           tbody
