--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -216,8 +216,8 @@ p {
   .home-icon .icon {
     width: 57px;
     height: 57px;
-    background-size: 57px 57px !important;
     margin: 0 auto 4px auto;
+    background-size: 57px 57px !important;
     border-radius: 12px;
     -webkit-border-radius: 12px;
     -moz-border-radius: 12px;
@@ -225,14 +225,27 @@ p {
     .home-icon .icon:hover {
       cursor: pointer; }
   .home-icon .title {
-    width: 70px;
+    text-align: center;
     margin-left: -2px;
+    width: 70px;
     line-height: 1.2em;
     height: 2.4em;
     overflow: hidden;
-    text-align: center;
     font-size: 12px;
     word-wrap: break-word; }
+
+.line {
+  width: 100%;
+  height: 67px; }
+  .line .icon {
+    vertical-align: middle;
+    margin: 0 0 4px 4px;
+    display: inline-block !important; }
+  .line .title {
+    display: inline-block;
+    text-align: left;
+    margin-left: 10px;
+    width: 218px; }
 
 .mobile-footer {
   font-size: 14px;
