--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -257,8 +257,8 @@ p {
   .icon {
     width: 57px;
     height: 57px;
-    background-size: 57px 57px !important;
     margin: 0 auto 4px auto;
+    background-size: 57px 57px !important;
     border-radius: 12px;
     -webkit-border-radius: 12px;
     -moz-border-radius: 12px;
@@ -266,14 +266,27 @@ p {
     &:hover {
       cursor: pointer; } }
   .title {
-    width: 70px;
+    text-align: center;
     margin-left: -2px;
+    width: 70px;
     line-height: 1.2em;
     height: 2.4em;
     overflow: hidden;
-    text-align: center;
     font-size: 12px;
     word-wrap: break-word; } }
+
+.line { 
+  width: 100%;
+  height: 67px; 
+  .icon {
+    vertical-align: middle;
+    margin: 0 0 4px 4px;
+    display: inline-block !important; }
+  .title {
+    display: inline-block;
+    text-align: left;
+    margin-left: 10px;
+    width: 218px; } }
 
 .mobile-footer {
   font-size: 14px;
