--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -438,10 +438,10 @@ script.customize(type="text/template")
             tr
               td
                 label = t 'builder.customize.icon_layout'
-                input type="radio" name="icon_layout" value="grid"
-                label = t 'builder.customize.icon_layout_grid'
-                input type="radio" name="icon_layout" value="line"
-                label = t 'builder.customize.icon_layout_line'
+                | <input id='radio_grid' type='radio' name='icon_layout' value='grid' #{'checked' if @company.settings.icon_layout == 'grid'} >
+                label id="radio_grid" = t 'builder.customize.icon_layout_grid'
+                | <input id='radio_line' type='radio' name='icon_layout' value='line' #{"checked" if @company.settings.icon_layout == 'line'} >
+                label id="radio_line" = t 'builder.customize.icon_layout_line'
 
         table.body_bg.wphoto-wrap
           tbody
