--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -205,13 +205,13 @@ p {
   font-size: 1em; }
 
 .home-icon {
-  float: left;
-  width: 25%;
-  height: 102px; }
+  float: left; }
   .home-icon a {
     color: #000;
     text-decoration: none; }
   .home-icon .inner {
+    width: 65px;
+    height: 88px;
     padding: 7.5px 5.5px 7.5px 5.5px; }
   .home-icon .icon {
     width: 57px;
@@ -234,14 +234,14 @@ p {
     font-size: 12px;
     word-wrap: break-word; }
 
-.line {
+.home-icon .inner.line {
   width: 100%;
-  height: 67px; }
-  .line .icon {
+  height: 57px; }
+  .home-icon .inner.line .icon {
     vertical-align: middle;
     margin: 0 0 4px 4px;
     display: inline-block !important; }
-  .line .title {
+  .home-icon .inner.line .title {
     display: inline-block;
     text-align: left;
     margin-left: 10px;
