--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -249,10 +249,10 @@ p {
 
 .home-icon {
   float: left;
-  width: 25%;
-  height: 102px;
   a { color: #000; text-decoration: none; }
   .inner {
+    width: 65px;
+    height: 88px;
     padding: 7.5px 5.5px 7.5px 5.5px; }
   .icon {
     width: 57px;
@@ -275,9 +275,9 @@ p {
     font-size: 12px;
     word-wrap: break-word; } }
 
-.line { 
+.home-icon .inner.line { 
   width: 100%;
-  height: 67px; 
+  height: 57px; 
   .icon {
     vertical-align: middle;
     margin: 0 0 4px 4px;
