--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -249,9 +249,9 @@ p {
 
 .home-icon {
   float: left;
+  width: 25%;
   a { color: #000; text-decoration: none; }
   .inner {
-    width: 65px;
     height: 88px;
     padding: 7.5px 5.5px 7.5px 5.5px; }
   .icon {
