--- a/app/views/mobile/_custom-style.html.erb
+++ b/app/views/mobile/_custom-style.html.erb
@@ -90,6 +90,7 @@
 <% (1..10).each do |i| %>
   <% i *= 10 %>
   <% size = i/100.0 * 57 %>
+  <% invalid_icon_size = i/100.0 * 24 %>
   <% radius = i/100.0 * 12 %>
 
 #home-widgets .home-icon .inner.line.<%= "height#{i}" %> {
@@ -99,10 +100,19 @@
 #home-widgets .home-icon .inner.line.<%= "height#{i}" %> .icon {
   width:<%= size %>px;
   height:<%= size %>px;
-  background-size: <%= size %>px <%= size %>px !important;
+  background-size: <%= size %>px;
   border-radius: <%= radius %>px;
   -webkit-border-radius: <%= radius %>px;
   -moz-border-radius: <%= radius %>px;
+}
+
+.home-icon.invalid .line.<%= "height#{i}" %> .invalid-icon {
+  top: -<%= i/10.0*5+15 %>px !important;
+  left: <%= i/10.0*4+3 %>px !important;
+  width: <%= invalid_icon_size %>px;
+  height: <%= invalid_icon_size %>px;
+  background-size: <%= invalid_icon_size %>px;
+    
 }
 
 <% end %>
