--- a/app/views/layouts/account.slim
+++ b/app/views/layouts/account.slim
@@ -1,5 +1,5 @@
 - content_for :css do
-  = stylesheet_link_tag 'account'
+  = stylesheet_link_tag '/stylesheets/account'
 
 - content_for :sidebar do
   ul
