--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -1,4 +1,4 @@
-! doctype 5
+doctype html
 html lang="en-US" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
@@ -8,11 +8,11 @@ html lang="en-US" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com
 
     title = "#{@company.name} | Mobile Website | YoMobi"
     = render 'shared/iphone-meta.html'
-    = stylesheet_link_tag 'mobile'
+    = stylesheet_link_tag '/stylesheets/mobile'
     = render 'mobile/custom-style'
     erb:
       <!--[if IE 7]>
-      <%= stylesheet_link_tag 'ie' %>
+      <%= stylesheet_link_tag '/stylesheets/ie' %>
       <![endif]-->
     meta name="keywords" content=@company.keywords
   body
@@ -20,20 +20,20 @@ html lang="en-US" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com
       = yield
 
     = render 'shared/templates'
-    = javascript_include_tag 'support/json2.min'
-    = javascript_include_tag 'support/jquery-1.6.4.min'
-    = javascript_include_tag 'support/underscore'
-    = javascript_include_tag 'support/backbone'
-    = javascript_include_tag 'util'
+    = javascript_include_tag '/javascripts/support/json2.min'
+    = javascript_include_tag '/javascripts/support/jquery-1.6.4.min'
+    = javascript_include_tag '/javascripts/support/underscore'
+    = javascript_include_tag '/javascripts/support/backbone'
+    = javascript_include_tag '/javascripts/util'
     = render :partial => 'shared/mobile-data-loader'
 
-    = javascript_include_tag 'widgets/mobile/base'
+    = javascript_include_tag '/javascripts/widgets/mobile/base'
 
     - Dir[widgets_dir('mobile/*.js')].sort.each do |widget|
       - next if File.basename(widget) == 'base.js'
-      = javascript_include_tag "widgets/mobile/#{File.basename widget}"
+      = javascript_include_tag "/javascripts/widgets/mobile/#{File.basename widget}"
 
-    = javascript_include_tag 'mobile-app'
+    = javascript_include_tag '/javascripts/mobile-app'
     - unless @is_preview_mode || @company.premium?
       javascript:
         showAds = true
@@ -64,10 +64,10 @@ html lang="en-US" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com
         setTimeout(function () { $(window).scrollTop(0); },1000);
       });
 
-    = javascript_include_tag 'support/bezen.domwrite.js'
+    = javascript_include_tag '/javascripts/support/bezen.domwrite.js'
     = javascript_include_tag "https://www.google.com/jsapi"
     javascript:
       google.load("feeds", "1");
 
     - if Rails.env.production?
-      = javascript_include_tag 'google-analytics'
+      = javascript_include_tag '/javascripts/google-analytics'
