--- a/app/views/layouts/_js-base.html.slim
+++ b/app/views/layouts/_js-base.html.slim
@@ -1,10 +1,10 @@
-= javascript_include_tag 'support/json2.min'
+= javascript_include_tag '/javascripts/support/json2.min'
 
-= javascript_include_tag 'support/jquery-1.6.4.min'
-= javascript_include_tag 'support/jquery-ui-1.8.17.custom.min'
-= javascript_include_tag 'support/jquery.tooltip.v.1.1'
+= javascript_include_tag '/javascripts/support/jquery-1.6.4.min'
+= javascript_include_tag '/javascripts/support/jquery-ui-1.8.17.custom.min'
+= javascript_include_tag '/javascripts/support/jquery.tooltip.v.1.1'
 = render 'shared/jquery-auth-patch'
 
-= javascript_include_tag 'support/underscore'
-= javascript_include_tag 'support/backbone'
-= javascript_include_tag 'util', 'builder.util'
+= javascript_include_tag '/javascripts/support/underscore'
+= javascript_include_tag '/javascripts/support/backbone'
+= javascript_include_tag '/javascripts/util', '/javascripts/builder.util'
