--- a/app/views/widgets/informed/email_panel.slim
+++ b/app/views/widgets/informed/email_panel.slim
@@ -2,8 +2,8 @@
   = render :partial => 'shared/sidebar', :locals => {:active => 'email'}
 
 - content_for :js do
-  = javascript_include_tag 'send_panel.js'
-  = javascript_include_tag 'views/sidebar'
+  = javascript_include_tag '/javascripts/send_panel.js'
+  = javascript_include_tag '/javascripts/views/sidebar'
 
   script type="text/javascript"
     | new SidebarView({ widgets:new Backbone.Collection, skipRender:true });
