added test accounts creation

--- a/app/views/test_drives/create.html.slim
+++ b/app/views/test_drives/create.html.slim
@@ -1,2 +1,4 @@
-p your login:
-p your password:
+p your email: #{@user.email}
+p your password: #{@password}
+
+p= link_to 'Continue', builder_main_path
