--- a/app/views/mobile/_yomobi-upgrade-ad.html.erb
+++ b/app/views/mobile/_yomobi-upgrade-ad.html.erb
@@ -13,9 +13,10 @@ function loadinparent(url){
 }
 //-->
 </SCRIPT>
-
-<div class="yomobi-upgrade-ad">
-  <table><tr><td>
-   	<a href="javascript:loadinparent('/site-manager', true);"><%= t 'builder.upgrade_ad.title' %></a>
-  </td></tr></table>
-</div>
+<% unless test_user? %>
+  <div class="yomobi-upgrade-ad">
+    <table><tr><td>
+      <a href="javascript:loadinparent('/site-manager', true);"><%= t 'builder.upgrade_ad.title' %></a>
+    </td></tr></table>
+  </div>
+<% end %>
