--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -29,6 +29,7 @@ window.g = {
   MAX_RSS_FEED_COUNT: <%= MAX_RSS_FEED_COUNT %>,
   openEditSettings: <%= @open_edit_settings || false %>,
   isPremium: <%= @company.premium? %>,
+  testUser: <%= @user.test_user? %>,
 
   wphotoUploadPath: "<%= wphoto_upload_path %>",
   customizeUploadPath: "<%= customize_upload_path %>",
