--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -3,8 +3,13 @@
   div.vdivider
   a href=help_url target="_blank" =t'navigation_bar.help'
   div.vdivider
-  a href=site_manager_path =t'navigation_bar.site_manager'
-  div.vdivider
-  a href=account_path =t'navigation_bar.account_settings'
-  div.vdivider
+  - unless test_user?
+    a href=site_manager_path =t'navigation_bar.site_manager'
+    div.vdivider
+    a href=account_path =t'navigation_bar.account_settings'
+    div.vdivider
   a href=builder_main_path =t'navigation_bar.site_builder'
+  - if test_user?
+    div.vdivider
+    = link_to t('navigation_bar.sign_up_now'), test_drive_path,
+      id: 'sign_up_now'
