--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -237,7 +237,10 @@ p.success {
       width: 1px;
       margin: 7px 0 0 0;
       float: right;
-    } 
+    }
+    #sign_up_now {
+      color: yellow;
+    }
   } 
 }
 
