new design first implementation

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -7,6 +7,7 @@ html lang="en-US"
 
     = render 'shared/meta'
 
+    = stylesheet_link_tag 'yomobi.screen'
     = stylesheet_link_tag '/stylesheets/signup-app'
     = stylesheet_link_tag '/stylesheets/flick/jquery-ui-1.8.11.custom'
     = yield :css
