--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -13,8 +13,7 @@ p {
   -webkit-margin-after: 0em; }
 
 em {
-  font-size:100%;  
-}
+  font-size: 100%; }
 
 .leaf-content h1, .leaf-content h2, .leaf-content h3, .custom_page h1, .custom_page h2, .custom_page h3 {
   margin: 4px 0px 4px 0px; }
@@ -241,6 +240,9 @@ em {
 .home-icon .inner.line {
   width: 100%;
   height: 57px; }
+.home-icon .inner.line:hover{
+  cursor: pointer;
+}
   .home-icon .inner.line .icon {
     vertical-align: middle;
     margin: 0 0 4px 4px;
