--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -445,9 +445,7 @@ script.customize(type="text/template")
                 label for="radio_line" = t 'builder.customize.icon_layout_line'
               td
                 label = t 'builder.customize.icon_line_height'
-                select name="icon_line_height"
-                  - (1..10).each do |i|
-                    option value="#{(11-i)*10}" #{(11-i)*10}%
+                = select_tag name="icon_line_height", options_for_select([["100%",100],["90%",90],["80%",80],["70%",70],["60%",60],["50%",50],["40%",40],["30%",30],["20%",20],["10%",10]]), @company.settings.icon_layout == 'line' ? {:enabled => :enabled} : {:disabled => :disabled}
                     
         table.body_bg.wphoto-wrap
           tbody
