--- a/app/assets/stylesheets/_yomobi.carousel.sass
+++ b/app/assets/stylesheets/_yomobi.carousel.sass
@@ -1,3 +1,13 @@
+#featuredContent 
+  background: none repeat scroll 0 0 #F5F2D7
+  max-height: 300px
+
+
+#featuredContent .orbit-slide 
+  background: none repeat scroll 0 0 #F5F2D7
+  padding: 30px 60px
+
+
 #content-top-wrap
   & > .carousel
     +hidden-515
@@ -6,34 +16,13 @@
       +margin-leader(1)
       +margin-trailer(0.2)
       color: $blue
-
-.yomobi-promo-carousel
-  position: relative
-  & > .content
-    +border-radius(10px)
-    background: $green
-    border: 3px solid #e3e0c8  
-    height: 346px
-    position: relative
-    .row
-      display: none
-      & > .carousel
-        left: perc(100px , 940px)
-        top: 25px
-        position: absolute
-        width: 78%
-      img
-        height: 230px
-        max-width: 100%
-      &.active
-        display: block
-      & > .banner-text
-        color: $white
-        font:
-          size: 36px
-        left: perc(100px , 940px)
-        position: absolute
-        bottom: 30px
-  & > a
-    +carousel-nav("carousel-nav.png", 25px , 27px, 152px, 2.5%, 2.5%)
-
+    .slider-left
+      float: left
+      width: 40%
+      .sources
+        width: 50%
+        min-width: 200px
+    .slider-right
+      margin-left: 2%
+      float: left
+      width: 40%
