fix line/grid radio button

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -353,6 +353,22 @@ script.customize(type="text/template")
                 div style="background-color:{{ header_text_color }}"
               input type="hidden" name="header_text_color" value="{{ header_text_color }}"
         br
+        table.body_bg.wphoto-wrap
+          tbody
+            tr
+              td
+                label = t 'builder.customize.icon_layout'
+                | <input id='radio_grid' type='radio' name='icon_layout' value='grid' >
+                label for="radio_grid" = t 'builder.customize.icon_layout_grid'
+              td
+                | <input id='radio_line' type='radio' name='icon_layout' value='line' >
+                label for="radio_line" = t 'builder.customize.icon_layout_line'
+              td
+                label = t 'builder.customize.icon_line_height'
+                select name="icon_line_height"
+                  - (1..10).each do |i|
+                    option value="#{(11-i)*10}" #{(11-i)*10}%
+
         table.banner.wphoto-wrap
           tbody
             tr
@@ -425,29 +441,6 @@ script.customize(type="text/template")
               .color-picker data-color="{{ body_bg_color }}" data-target="body_bg_color"
                 div style="background-color:{{ body_bg_color }}"
               input type="hidden" name="body_bg_color" value="{{ body_bg_color }}"
-          tr
-            td
-              label = t 'builder.customize.icon_text_color'
-            td
-              .color-picker data-color="{{ icon_text_color }}" data-target="icon_text_color"
-                div style="background-color:{{ icon_text_color }}"
-              input type="hidden" name="icon_text_color" value="{{ icon_text_color }}"
-              
-        table.body_bg.wphoto-wrap
-          tbody
-            tr
-              td
-                label = t 'builder.customize.icon_layout'
-                | <input id='radio_grid' type='radio' name='icon_layout' value='grid' #{'checked' if @company.settings.icon_layout == 'grid'} >
-                label for="radio_grid" = t 'builder.customize.icon_layout_grid'
-              td
-                | <input id='radio_line' type='radio' name='icon_layout' value='line' #{'checked' if @company.settings.icon_layout == 'line'} >
-                label for="radio_line" = t 'builder.customize.icon_layout_line'
-              td
-                label = t 'builder.customize.icon_line_height'
-                select name="icon_line_height"
-                  - (1..10).each do |i|
-                    option value="#{(11-i)*10}" #{(11-i)*10}%
                     
         table.body_bg.wphoto-wrap
           tbody
