--- a/app/assets/stylesheets/_yomobi.footer.sass
+++ b/app/assets/stylesheets/_yomobi.footer.sass
@@ -1,7 +1,7 @@
 #footer-wrap
   font-family: $sans-serif
   //background: url('/assets/footer-bg.png') $blue repeat-x center top
-  background: #257992; /* Old browsers */
+  background: #43a8c7; /* Old browsers */
   background: -moz-linear-gradient(top,  #257992 0%, #257992 2%, #328da9 7%, #3ea0be 14%, $blue 21%, $blue 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#257992), color-stop(2%,#257992), color-stop(7%,#328da9), color-stop(14%,#3ea0be), color-stop(21%,$blue), color-stop(100%,$blue)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  #257992 0%,#257992 2%,#328da9 7%,#3ea0be 14%,$blue 21%,$blue 100%); /* Chrome10+,Safari5.1+ */
